# dxcluster

./: AGENTS.md  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: ci.yml
crates/dxcluster-cli/: Cargo.toml  README.md
crates/dxcluster-cli/src/: main.rs
crates/dxcluster-client/: Cargo.toml
crates/dxcluster-client/src/: client.rs  error.rs  lib.rs  peer.rs  reconnect.rs  telnet.rs
crates/dxcluster-model/: Cargo.toml
crates/dxcluster-model/src/: cache.rs  dedupe.rs  error.rs  filter.rs  lib.rs  policy.rs  rate_limit.rs  spot.rs
crates/dxcluster-node/: Cargo.toml
crates/dxcluster-node-bin/: Cargo.toml
crates/dxcluster-node-bin/src/: main.rs
crates/dxcluster-node/src/: config.rs  error.rs  lib.rs  node.rs  peer_session.rs  session.rs  state.rs  upstream.rs
crates/dxcluster-node/tests/: peer_sessions.rs  user_sessions.rs
crates/dxcluster-types/: Cargo.toml
crates/dxcluster-types/src/: band.rs  callsign.rs  error.rs  frequency.rs  ids.rs  lib.rs  mode.rs  normalize.rs
crates/dxcluster-wire/: Cargo.toml
crates/dxcluster-wire/src/: error.rs  format.rs  lib.rs  parse.rs  peer.rs  user.rs
crates/dxcluster-wire/tests/: peer_frames.rs  peer_roundtrip.rs  user_roundtrip.rs
