[workspace]
members = [
    "crates/dxcluster-types",
    "crates/dxcluster-model",
    "crates/dxcluster-wire",
    "crates/dxcluster-client",
    "crates/dxcluster-node",
    "crates/dxcluster-node-bin",
    "crates/dxcluster-cli",
]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
thiserror = { version = "1" }
blake3 = { version = "1" }
time = { version = "0.3", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["net", "io-util", "macros", "rt", "rt-multi-thread", "sync"] }
tokio-util = { version = "0.7" }
futures = { version = "0.3" }
tracing = { version = "0.1" }
anyhow = { version = "1" }
